Add support for NoteblockAPI's `PositionSongPlayer`